Fix social icons to work with dark mode and moved them to theme

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -162,6 +162,11 @@ ul {
 
 .dot {
   color: var(--dot-color);
+  position: relative;
+  display: inline-block;
+  padding: 0 5px;
+  margin: 0 -5px;
+  overflow: visible;
 }
 
 .footnotes {
